[gd_scene load_steps=3 format=2]

[ext_resource path="res://LEVEL.tscn" type="PackedScene" id=1]
[ext_resource path="res://LEVEL.gd" type="Script" id=2]

[node name="Spatial" index="0" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="RedGridMap" parent="." index="0"]

data = {
"cells": PoolIntArray( 3, 0, 0, 5, 0, 0, 7, 0, 0, 65529, 0, 0, 65531, 0, 0, 65533, 0, 0, 3, 1, 0, 5, 1, 0, 7, 1, 0, 65529, 1, 0, 65531, 1, 0, 65533, 1, 0, 3, 2, 0, 5, 2, 0, 7, 2, 0, 65529, 2, 0, 65531, 2, 0, 65533, 2, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 5, 3, 0, 7, 3, 0, 65529, 3, 0, 65531, 3, 0, 65533, 3, 0, 65534, 3, 0, 65535, 3, 0, 5, 4, 0, 7, 4, 0, 65529, 4, 0, 65531, 4, 0, 0, 5, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 5, 0, 7, 5, 0, 65529, 5, 0, 65531, 5, 0, 65532, 5, 0, 65533, 5, 0, 65534, 5, 0, 65535, 5, 0, 7, 6, 0, 65529, 6, 0, 0, 7, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 65529, 7, 0, 65530, 7, 0, 65531, 7, 0, 65532, 7, 0, 65533, 7, 0, 65534, 7, 0, 65535, 7, 0, 0, 65529, 0, 1, 65529, 0, 2, 65529, 0, 3, 65529, 0, 4, 65529, 0, 5, 65529, 0, 6, 65529, 0, 7, 65529, 0, 65529, 65529, 0, 65530, 65529, 0, 65531, 65529, 0, 65532, 65529, 0, 65533, 65529, 0, 65534, 65529, 0, 65535, 65529, 0, 7, 65530, 0, 65529, 65530, 0, 0, 65531, 0, 1, 65531, 0, 2, 65531, 0, 3, 65531, 0, 4, 65531, 0, 5, 65531, 0, 7, 65531, 0, 65529, 65531, 0, 65531, 65531, 0, 65532, 65531, 0, 65533, 65531, 0, 65534, 65531, 0, 65535, 65531, 0, 5, 65532, 0, 7, 65532, 0, 65529, 65532, 0, 65531, 65532, 0, 0, 65533, 0, 1, 65533, 0, 2, 65533, 0, 3, 65533, 0, 5, 65533, 0, 7, 65533, 0, 65529, 65533, 0, 65531, 65533, 0, 65533, 65533, 0, 65534, 65533, 0, 65535, 65533, 0, 3, 65534, 0, 5, 65534, 0, 7, 65534, 0, 65529, 65534, 0, 65531, 65534, 0, 65533, 65534, 0, 3, 65535, 0, 5, 65535, 0, 7, 65535, 0, 65529, 65535, 0, 65531, 65535, 0, 65533, 65535, 0 )
}

[node name="BlueGridMap" parent="." index="1"]

data = {
"cells": PoolIntArray( 3, 0, 0, 5, 0, 0, 7, 0, 0, 65529, 0, 0, 65531, 0, 0, 65533, 0, 0, 3, 1, 0, 5, 1, 0, 7, 1, 0, 65529, 1, 0, 65531, 1, 0, 65533, 1, 0, 3, 2, 0, 5, 2, 0, 7, 2, 0, 65529, 2, 0, 65531, 2, 0, 65533, 2, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 5, 3, 0, 7, 3, 0, 65529, 3, 0, 65531, 3, 0, 65533, 3, 0, 65534, 3, 0, 65535, 3, 0, 5, 4, 0, 7, 4, 0, 65529, 4, 0, 65531, 4, 0, 0, 5, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 5, 0, 7, 5, 0, 65529, 5, 0, 65531, 5, 0, 65532, 5, 0, 65533, 5, 0, 65534, 5, 0, 65535, 5, 0, 7, 6, 0, 65529, 6, 0, 0, 7, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 65529, 7, 0, 65530, 7, 0, 65531, 7, 0, 65532, 7, 0, 65533, 7, 0, 65534, 7, 0, 65535, 7, 0, 0, 65529, 0, 1, 65529, 0, 2, 65529, 0, 3, 65529, 0, 4, 65529, 0, 5, 65529, 0, 6, 65529, 0, 7, 65529, 0, 65529, 65529, 0, 65530, 65529, 0, 65531, 65529, 0, 65532, 65529, 0, 65533, 65529, 0, 65534, 65529, 0, 65535, 65529, 0, 7, 65530, 0, 65529, 65530, 0, 0, 65531, 0, 1, 65531, 0, 2, 65531, 0, 3, 65531, 0, 4, 65531, 0, 5, 65531, 0, 7, 65531, 0, 65529, 65531, 0, 65531, 65531, 0, 65532, 65531, 0, 65533, 65531, 0, 65534, 65531, 0, 65535, 65531, 0, 5, 65532, 0, 7, 65532, 0, 65529, 65532, 0, 65531, 65532, 0, 0, 65533, 0, 1, 65533, 0, 2, 65533, 0, 3, 65533, 0, 5, 65533, 0, 7, 65533, 0, 65529, 65533, 0, 65531, 65533, 0, 65533, 65533, 0, 65534, 65533, 0, 65535, 65533, 0, 3, 65534, 0, 5, 65534, 0, 7, 65534, 0, 65529, 65534, 0, 65531, 65534, 0, 65533, 65534, 0, 3, 65535, 0, 5, 65535, 0, 7, 65535, 0, 65529, 65535, 0, 65531, 65535, 0, 65533, 65535, 0 )
}

[node name="GreenGridMap" parent="." index="2"]

data = {
"cells": PoolIntArray( 3, 0, 0, 5, 0, 0, 7, 0, 0, 65529, 0, 0, 65531, 0, 0, 65533, 0, 0, 3, 1, 0, 5, 1, 0, 7, 1, 0, 65529, 1, 0, 65531, 1, 0, 65533, 1, 0, 3, 2, 0, 5, 2, 0, 7, 2, 0, 65529, 2, 0, 65531, 2, 0, 65533, 2, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 5, 3, 0, 7, 3, 0, 65529, 3, 0, 65531, 3, 0, 65533, 3, 0, 65534, 3, 0, 65535, 3, 0, 5, 4, 0, 7, 4, 0, 65529, 4, 0, 65531, 4, 0, 0, 5, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 5, 0, 7, 5, 0, 65529, 5, 0, 65531, 5, 0, 65532, 5, 0, 65533, 5, 0, 65534, 5, 0, 65535, 5, 0, 7, 6, 0, 65529, 6, 0, 0, 7, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 65529, 7, 0, 65530, 7, 0, 65531, 7, 0, 65532, 7, 0, 65533, 7, 0, 65534, 7, 0, 65535, 7, 0, 0, 65529, 0, 1, 65529, 0, 2, 65529, 0, 3, 65529, 0, 4, 65529, 0, 5, 65529, 0, 6, 65529, 0, 7, 65529, 0, 65529, 65529, 0, 65530, 65529, 0, 65531, 65529, 0, 65532, 65529, 0, 65533, 65529, 0, 65534, 65529, 0, 65535, 65529, 0, 7, 65530, 0, 65529, 65530, 0, 0, 65531, 0, 1, 65531, 0, 2, 65531, 0, 3, 65531, 0, 4, 65531, 0, 5, 65531, 0, 7, 65531, 0, 65529, 65531, 0, 65531, 65531, 0, 65532, 65531, 0, 65533, 65531, 0, 65534, 65531, 0, 65535, 65531, 0, 5, 65532, 0, 7, 65532, 0, 65529, 65532, 0, 65531, 65532, 0, 0, 65533, 0, 1, 65533, 0, 2, 65533, 0, 3, 65533, 0, 5, 65533, 0, 7, 65533, 0, 65529, 65533, 0, 65531, 65533, 0, 65533, 65533, 0, 65534, 65533, 0, 65535, 65533, 0, 3, 65534, 0, 5, 65534, 0, 7, 65534, 0, 65529, 65534, 0, 65531, 65534, 0, 65533, 65534, 0, 3, 65535, 0, 5, 65535, 0, 7, 65535, 0, 65529, 65535, 0, 65531, 65535, 0, 65533, 65535, 0 )
}

[node name="RainbowGridMap" parent="." index="3"]

data = {
"cells": PoolIntArray(  )
}


